get user articles
